Fixed issue url to correct and wrapped repo name to url also. (related to #1)

--- a/src/containers/Repository/Repository.css
+++ b/src/containers/Repository/Repository.css
@@ -13,6 +13,11 @@
     color: #2f2f2f;
   }
 
+    .repository__name a {
+      text-decoration: none;
+      color: inherit;
+    }
+
   .issuelist {
     list-style: none;
     margin: 0;
